[package]
name = "proc_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettyplease = {version = "0.2.15", features = ["verbatim"]}
proc-macro2 = {}
quote = {}
syn = { features = ["full", "visit", "parsing", "printing", "visit", "visit-mut", "fold", "extra-traits", "clone-impls"] }
term = "0.7.0"

[lib]
proc-macro = true
